--- a/zszhApp_v2/src/zszh_welcome/PopWin_Save.mxml
+++ b/zszhApp_v2/src/zszh_welcome/PopWin_Save.mxml
@@ -57,37 +57,49 @@
 	
 	<fx:Script>
 		<![CDATA[
+			import mx.events.FlexEvent;
+			import mx.graphics.ImageSnapshot;
 			import mx.managers.PopUpManager;
 			
+			import zszh_WorkSpace2D.WorkSpace2D;
+			
+			
+			protected function ImageInitializeHandler(event:FlexEvent):void
+			{
+				GetSnapshot();
+			}
 			
 			private function OnSave():void{
+				//保存到服务器
 				
 			}
 			private function OnCancel():void {
 				PopUpManager.removePopUp(this);
 			}
-			
-			
-			public function GetSnapshot():void
-			{
-				/*var imageSnap:ImageSnapshot = ImageSnapshot.captureImage(text1); 
-				var imageByteArray:ByteArray = imageSnap.data as ByteArray; 
-				HouseStylePic .load(imageByteArray);
+		
+
+			private function GetSnapshot():void
+			{				
+				var _work2D:WorkSpace2D=parentApplication.GetWorkSpace2D();
+				_work2D.GetBounds();
+				
+				_work2D.GetGrid().clearGird();
+				var bitmapData:BitmapData=ImageSnapshot.captureBitmapData(_work2D.GetGrid());
+				_work2D.GetGrid().drawGird();
+				var w:int=(_work2D._xMax-_work2D._xMin)*bitmapData.width/6400+100;
+				var h:int=(_work2D._yMax-_work2D._yMin)*bitmapData.width/6400+100;
+				var rect:Rectangle = new Rectangle(_work2D._xMin*bitmapData.width/6400-50,_work2D._yMin*bitmapData.width/6400-50,w,h);    
+				var bytearray:ByteArray = new ByteArray();
+				bytearray = bitmapData.getPixels(rect); //截取出所选区域的像素集合
 				
 				
-				//用bitmapdata全部获取预览图片的像素
-				65                 var initBD:BitmapData = new BitmapData(preUploadImage.width,preUploadImage.height);
-				66                 initBD.draw(preUploadImage);                
-				67                 var bytearray:ByteArray = new ByteArray();
-				68                 //矩形为要截取区域                
-				69                 var re:Rectangle = new Rectangle(finalX,finalY,w,h);                            
-				70                 bytearray = initBD.getPixels(re); //截取出所选区域的像素集合
-				71                 var imgBD:BitmapData = new BitmapData(w,h);                
-				72                 bytearray.position=0;            //必须的，当前的bytearray.position为最大长度，要设为从0开始读取
-				73                 var fillre:Rectangle = new Rectangle(0,0,w,h);
-				74                 imgBD.setPixels(fillre,bytearray);    //将截取出的像素集合存在新的bitmapdata里，大小和截取区域一样
-				75                 showImg(imgBD);            //显示图片*/
+				var imgBD:BitmapData = new BitmapData(w,h);
+				bytearray.position=0;
+				var fillrect:Rectangle = new Rectangle(0,0,w,h);
+				imgBD.setPixels(fillrect,bytearray);
 				
+				var bitmap:Bitmap=new Bitmap(imgBD);
+				HouseStylePic.source=bitmap;
 			}
 		]]>
 	</fx:Script>
@@ -102,7 +114,7 @@
 			
 			<s:SkinnableContainer  width="100%" height="290" bottom="100" skinClass="zszh_welcome.Skin_WelcomeCenter" >
 					
-					<s:Image id="HouseStylePic" x="110" y="50" width="160" height="145" backgroundColor="0xb3b3b3" />
+					<s:Image id="HouseStylePic" x="110" y="50" width="160" height="145" backgroundColor="0xb3b3b3" initialize="ImageInitializeHandler(event)" />
 					<s:Label id="CreateDate" text="2013/4/23" x="205" y="205" color="0x595959"  />
 					
 					<s:Label text="设计名称" x="320" y="55" />
